fix: job item spacing

--- a/src/components/organisms/job-list/job-list.module.scss
+++ b/src/components/organisms/job-list/job-list.module.scss
@@ -27,6 +27,10 @@
   margin: 1rem 0 1rem 0;
 }
 
+.description {
+  margin-bottom: 1rem;
+}
+
 .footer {
   font-size: var(--font-size-s2);
   color: var(--color-gray-01);
